Converted documentIDsMustBeUnique to Selenium

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -950,23 +950,25 @@ documentHasTitleElement:
   tags:
     - "document"
     - "head"
-documentIDsMustBeUnique:
-  testability: 1
-  title:
-    en: "All element \"id\" attributes must be unique"
-    nl: "Alle element \"id\"-attributen moeten uniek zijn"
-  description:
-    en: "Element \"id\" attributes must be unique."
-    nl: "Element \"id\"-attributen moeten uniek zijn."
-  guidelines:
-    wcag:
-      4.1.1:
-        techniques:
-          - "F77"
-          - "H93"
-  tags:
-    - "document"
-    - "semantics"
+#
+# @todo We need a custom Mocha selector that doesn't use ids to test this
+# documentIDsMustBeUnique:
+#   testability: 1
+#   title:
+#     en: "All element \"id\" attributes must be unique"
+#     nl: "Alle element \"id\"-attributen moeten uniek zijn"
+#   description:
+#     en: "Element \"id\" attributes must be unique."
+#     nl: "Element \"id\"-attributen moeten uniek zijn."
+#   guidelines:
+#     wcag:
+#       4.1.1:
+#         techniques:
+#           - "F77"
+#           - "H93"
+#   tags:
+#     - "document"
+#     - "semantics"
 documentIsWrittenClearly:
   testability: 0.5
   title:
