Knocked out languageChangesAreIdentified

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2471,24 +2471,24 @@ labelsAreAssignedToAnInput:
   tags:
     - "form"
     - "content"
-languageChangesAreIdentified:
-  testability: 0.5
-  title:
-    en: "Use language attributes to indicate changes in language"
-    nl: "Gebruik het taal-attribuut om aan te geven dat de taal verandert"
-  description:
-    en: "When the language of the document changes, make sure to wrap those changes in an element with the <code>lang</code> attribute."
-    nl: "Als de taal van het document verandert, zet deze veranderingen dan in een element met het <code>lang</code>-attribuut."
-  guidelines:
-    wcag:
-      3.1.2:
-        techniques:
-          - "H58"
-  tags:
-    - "language"
-    - "content"
-  components:
-    - "language"
+#
+# @see https://github.com/quailjs/quail/issues/378
+# languageChangesAreIdentified:
+#   testability: 0.5
+#   title:
+#     en: "Use language attributes to indicate changes in language"
+#     nl: "Gebruik het taal-attribuut om aan te geven dat de taal verandert"
+#   description:
+#     en: "When the language of the document changes, make sure to wrap those changes in an element with the <code>lang</code> attribute."
+#     nl: "Als de taal van het document verandert, zet deze veranderingen dan in een element met het <code>lang</code>-attribuut."
+#   guidelines:
+#     wcag:
+#       3.1.2:
+#         techniques:
+#           - "H58"
+#   tags:
+#     - "language"
+#     - "content"
 languageDirAttributeIsUsed:
   testability: 0.5
   title:
