Converted siteMap to Selenium

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -3380,6 +3380,8 @@ selectJumpMenu:
     - "content"
   components:
     - "hasEventListener"
+#
+# @todo this assessment is broken and returning false positives.
 siteMap:
   testability: 0
   title:
