--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "quail": "./bin/quail"
   },
   "scripts": {
+    "compile": "babel -e -d lib/ src/",
+    "prepublish": "npm run compile",
     "test": "grunt test"
   },
   "dependencies": {
@@ -32,6 +34,7 @@
     "webdriverio": "2.3.0"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
     "bower": "^1.3.12",
     "chai": "^1.9.2",
     "chai-as-promised": "^4.1.1",
