Babelize the src files to lib.

--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-convert": "~0.1.5",
+    "grunt-exec": "^0.4.6",
     "grunt-execute": "^0.2.2",
     "grunt-gh-pages": "~0.8.1",
     "grunt-jscs": "^1.5.0",
     "grunt-karma": "^0.9.0",
+    "grunt-run": "^0.4.0",
     "karma": "^0.12.24",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.5",
