--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "quail": "./bin/quail"
   },
   "scripts": {
+    "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
+    "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
+    "browserify": "node ./scripts/browserifyLib.js",
     "compile": "babel -e -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "grunt test"
@@ -35,13 +38,16 @@
   },
   "devDependencies": {
     "babel": "^5.8.23",
+    "babel-eslint": "^4.1.1",
+    "babelify": "^6.3.0",
     "bower": "^1.3.12",
+    "browserify": "^11.0.1",
     "chai": "^1.9.2",
     "chai-as-promised": "^4.1.1",
+    "eslint": "^1.3.1",
     "glob": "^4.2.1",
     "grunt": "~0.4.5",
     "grunt-bower-task": "~0.4.0",
-    "grunt-chmod": "^1.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "^0.6.0",
@@ -52,10 +58,11 @@
     "grunt-exec": "^0.4.6",
     "grunt-execute": "^0.2.2",
     "grunt-gh-pages": "~0.8.1",
-    "grunt-jscs": "^1.5.0",
     "grunt-karma": "^0.9.0",
     "grunt-run": "^0.4.0",
+    "jscs": "jscs-dev/node-jscs#c5adeba",
     "karma": "^0.12.24",
+    "karma-browserify": "^4.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
