--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "browserify": "node ./scripts/browserifyLib.js && node ./scripts/browserifyDev.js",
     "compile": "babel -e -d lib/ src/",
     "prepublish": "npm run compile",
-    "test": "grunt test"
+    "test": "bower install && karma start && node ./test/assessmentSpecs/testRunner.js"
   },
   "dependencies": {
     "chai-spies": "^0.5.1",
@@ -39,9 +39,12 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.1",
+    "babel-polyfill": "^6.2.0",
     "babelify": "^6.3.0",
     "bower": "^1.3.12",
+    "brfs": "^1.4.1",
     "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.11",
     "chai": "^1.9.2",
     "chai-as-promised": "^4.1.1",
     "eslint": "^1.3.1",
@@ -57,34 +60,26 @@
     "grunt-exec": "^0.4.6",
     "grunt-execute": "^0.2.2",
     "grunt-gh-pages": "~0.8.1",
-    "grunt-karma": "^0.9.0",
     "grunt-run": "^0.4.0",
     "jscs": "jscs-dev/node-jscs#c5adeba",
     "karma": "^0.12.24",
-    "karma-browserify": "^4.3.0",
+    "karma-browserify": "^4.4.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
     "karma-html-reporter": "^0.2.4",
-    "karma-html2js-preprocessor": "^0.1.0",
     "karma-ie-launcher": "^0.1.5",
     "karma-mocha": "^0.1.9",
     "karma-opera-launcher": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.2",
     "karma-safari-launcher": "^0.1.1",
     "karma-sinon": "^1.0.3",
     "karma-spec-reporter": "0.0.13",
-    "karma-webdriver-launcher": "^0.2.0",
     "mocha": "^2.0.1",
-    "requirejs": "^2.1.15",
     "should": "^4.3.0",
     "sinon": "^1.10.3"
   },
-  "jam": {
-    "dependencies": {
-      "jquery": ">1.4.2",
-      "underscore": ">1.3.1"
-    }
+  "browserify-shim": {
+    "external": "global:External"
   }
 }
