--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
     "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
     "browserify": "node ./scripts/browserifyLib.js && node ./scripts/browserifyDev.js",
-    "compile": "babel -e -d lib/ src/",
+    "compile": "npm run jscs && npm run eslint && npm run browserify",
     "prepublish": "npm run compile",
-    "test": "bower install && karma start && node ./test/assessmentSpecs/testRunner.js"
+    "test": "bower install && npm run compile && karma start && node ./test/assessmentSpecs/testRunner.js"
   },
   "dependencies": {
     "chai-spies": "^0.5.1",
