--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "karma-safari-launcher": "^0.1.1",
     "karma-sinon": "^1.0.3",
     "karma-spec-reporter": "0.0.13",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.0.1",
     "should": "^4.3.0",
     "sinon": "^1.10.3"
