add compile and test.json creation to the npm test command

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
     "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
     "browserify": "node ./scripts/browserifyLib.js && node ./scripts/browserifyDev.js",
-    "compile": "npm run jscs && npm run eslint && npm run browserify",
+    "compile": "grunt test && npm run jscs && npm run eslint && npm run browserify",
     "prepublish": "npm run compile",
     "test": "bower install && npm run compile && karma start && node ./test/assessmentSpecs/testRunner.js"
   },
