--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quail",
+  "name": "@quailjs/quail",
   "description": "Accessibility testing in the browser and on the server.",
   "homepage": "http://quailjs.org",
   "version": "2.2.18",
@@ -11,9 +11,6 @@
     "url": "git://github.com/quailjs/quail.git"
   },
   "main": "./quail.js",
-  "bin": {
-    "quail": "./bin/quail"
-  },
   "scripts": {
     "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
     "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
@@ -25,12 +22,10 @@
   },
   "dependencies": {
     "chai-spies": "^0.5.1",
-    "commander": "^2.3.0",
     "deepmerge": "^0.2.7",
     "http-server": "0.7.3",
     "jquery": ">1.4.2",
     "node-fs-extra": "^0.8.1",
-    "opener": "^1.4.0",
     "phantomjs": "^1.9.18",
     "q": "^1.1.2",
     "selenium-standalone": "2.43.1-5",
@@ -63,19 +58,6 @@
     "grunt-gh-pages": "~0.8.1",
     "grunt-run": "^0.4.0",
     "jscs": "jscs-dev/node-jscs#c5adeba",
-    "karma": "^0.12.24",
-    "karma-browserify": "^4.4.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-html-reporter": "^0.2.4",
-    "karma-ie-launcher": "^0.1.5",
-    "karma-mocha": "^0.1.9",
-    "karma-opera-launcher": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sinon": "^1.0.3",
-    "karma-spec-reporter": "0.0.13",
     "mkdirp": "^0.5.1",
     "mocha": "^2.0.1",
     "should": "^4.3.0",
