--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "grunt-execute": "^0.2.2",
     "grunt-gh-pages": "~0.8.1",
     "grunt-run": "^0.4.0",
+    "gulp-gzip": "^1.2.0",
+    "gulp-uglify": "^1.5.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
     "mkdirp": "^0.5.1",
     "mocha": "^2.0.1",
