Adding assessment configuration.

--- a/.quailrc
+++ b/.quailrc
@@ -2,12 +2,12 @@
   "assessmentSpecsPath": "test/assessmentSpecs/specs",
   "jquery": "node_modules/jquery/dist/jquery.min.js",
   "quail": "dist/runInBrowser.js",
+  "requireModules": [],
+  "requireAssessmentModules": [
+    "config/all_assessments.json"
+  ],
   "requirePaths": [
-    "./config",
     "./src/assessments",
     "./vendor"
-  ],
-  "requireModules": [
-    "AllTests"
   ]
 }
