--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "bower install && npm run compile && karma start && node ./test/assessmentSpecs/testRunner.js"
   },
   "dependencies": {
-    "@quailjs/quail-core": "0.0.2",
+    "@quailjs/quail-cli": "0.0.4",
+    "@quailjs/quail-core": "0.0.3",
     "chai-spies": "^0.5.1",
     "deepmerge": "^0.2.7",
     "http-server": "0.7.3",
