--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "scripts": {
     "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
     "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
-    "browserify": "node ./scripts/browserifyLib.js && node ./scripts/browserifyDev.js",
-    "compile": "grunt test && npm run jscs && npm run eslint && quail build",
-    "prepublish": "npm run compile",
-    "test": "bower install && npm run compile && node ./test/assessmentSpecs/testRunner.js"
+    "build": "quail build",
+    "compile": "bower install",
+    "preversion": "npm test",
+    "version": "npm run build && git add -A dist && git commit -m \"Versioned the npm module.\"",
+    "postversion": "git push",
+    "test": "bower install && grunt test && npm run jscs && npm run eslint && npm run test-runner",
+    "selenium": "start-selenium",
+    "test-runner": "node ./test/assessmentSpecs/testRunner.js",
+    "test-selenium": "start-selenium && npm run test-runner"
   },
   "dependencies": {
-    "@quailjs/quail-core": "0.0.2",
     "chai-spies": "^0.5.1",
     "deepmerge": "^0.2.7",
     "http-server": "0.7.3",
@@ -31,6 +35,8 @@
     "webdriverio": "2.3.0"
   },
   "devDependencies": {
+    "@quailjs/quail-cli": "0.0.8",
+    "@quailjs/quail-core": "0.0.9",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.1",
     "babel-polyfill": "^6.2.0",
