Remove grunt from the package

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_script:
 sudo: false
 
 install:
-- npm install grunt-cli -g
-- npm install
+- npm --version
+- npm install bower
 addons:
   sauce_connect: true
 env:
