--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preversion": "npm test",
     "version": "npm run build && git add -A dist && git commit -m \"Versioned the npm module.\"",
     "postversion": "git push",
-    "test": "bower install && grunt test && npm run jscs && npm run eslint && npm run test-runner",
+    "test": "bower install && npm run jscs && npm run eslint && npm run test-runner",
     "selenium": "start-selenium",
     "test-runner": "node ./test/assessmentSpecs/testRunner.js",
     "test-selenium": "start-selenium && npm run test-runner"
@@ -49,18 +49,6 @@
     "chai-as-promised": "^4.1.1",
     "eslint": "^1.3.1",
     "glob": "^4.2.1",
-    "grunt": "~0.4.5",
-    "grunt-bower-task": "~0.4.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.6.0",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-convert": "~0.1.5",
-    "grunt-exec": "^0.4.6",
-    "grunt-execute": "^0.2.2",
-    "grunt-gh-pages": "~0.8.1",
-    "grunt-run": "^0.4.0",
     "gulp-gzip": "^1.2.0",
     "gulp-uglify": "^1.5.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
