--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- 0.10
+- 0.12
 # Selenium 2.44.0 does not work with PhantomJS. Use 2.43.0
 # @see https://code.google.com/p/selenium/issues/detail?id=8088
 before_script:
@@ -12,7 +12,7 @@ sudo: false
 
 install:
 - npm --version
-- npm install bower
+- npm install
 addons:
   sauce_connect: true
 env:
