--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "test-selenium": "start-selenium && npm run test-runner"
   },
   "dependencies": {
-    "chai-spies": "^0.5.1",
-    "deepmerge": "^0.2.7",
+    "glob": "^6.0.1",
     "http-server": "0.7.3",
-    "jquery": ">1.4.2",
-    "node-fs-extra": "^0.8.1",
+    "jquery": "^2.1.4",
     "phantomjs": "^1.9.18",
     "q": "^1.1.2",
     "selenium-standalone": "2.43.1-5",
@@ -35,28 +33,20 @@
     "webdriverio": "2.3.0"
   },
   "devDependencies": {
-    "@quailjs/quail-core": "0.0.13",
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.1",
+    "@quailjs/quail-core": "0.0.14",
+    "babel-eslint": "^5.0.0-beta4",
     "babel-polyfill": "^6.2.0",
-    "babelify": "^6.3.0",
+    "babel-preset-stage-2": "^6.1.18",
+    "babelify": "^7.2.0",
     "bower": "^1.3.12",
-    "brfs": "^1.4.1",
     "browserify": "^11.0.1",
-    "browserify-shim": "^3.8.11",
     "chai": "^1.9.2",
     "chai-as-promised": "^4.1.1",
+    "chai-spies": "^0.5.1",
+    "deepmerge": "^0.2.7",
     "eslint": "^1.3.1",
-    "glob": "^4.2.1",
-    "gulp-gzip": "^1.2.0",
-    "gulp-uglify": "^1.5.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
-    "mkdirp": "^0.5.1",
     "mocha": "^2.0.1",
-    "should": "^4.3.0",
     "sinon": "^1.10.3"
-  },
-  "browserify-shim": {
-    "external": "global:External"
   }
 }
