--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test-selenium": "start-selenium && npm run test-runner"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.1.18",
     "glob": "^6.0.1",
     "http-server": "0.7.3",
     "jquery": "^2.1.4",
@@ -36,6 +37,7 @@
     "@quailjs/quail-core": "0.0.14",
     "babel-eslint": "^5.0.0-beta4",
     "babel-polyfill": "^6.2.0",
+    "babel-preset-stage-1": "^6.1.18",
     "babel-preset-stage-2": "^6.1.18",
     "babelify": "^7.2.0",
     "bower": "^1.3.12",
