--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@quailjs/quail",
   "description": "Accessibility testing in the browser and on the server.",
   "homepage": "http://quailjs.org",
-  "version": "2.2.18",
+  "version": "3.0.0-0",
   "license": "MIT",
   "repository": {
     "type": "git",
