--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "homepage": "http://quailjs.org",
   "version": "3.0.0-0",
   "license": "MIT",
+  "author": {
+    "name" : "Jesse Beach",
+    "email" : "splendidnoise@gmail.com",
+    "url" : "https://jessebeach.github.io/"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/quailjs/quail.git"
