--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "version": "3.0.0-0",
   "license": "MIT",
   "author": {
-    "name" : "Jesse Beach",
-    "email" : "splendidnoise@gmail.com",
-    "url" : "https://jessebeach.github.io/"
+    "name": "Jesse Beach",
+    "email": "splendidnoise@gmail.com",
+    "url": "https://jessebeach.github.io/"
   },
   "repository": {
     "type": "git",
@@ -16,19 +16,21 @@
   "scripts": {
     "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
     "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
-    "compile": "bower install && $(which quail) build",
+    "compile": "quail build",
     "prepublish": "npm run compile",
-    "test": "bower install && npm run jscs && npm run eslint && npm run test-runner",
+    "test": "npm run jscs && npm run eslint && npm run test-runner",
     "selenium": "start-selenium",
     "test-runner": "node ./test/assessmentSpecs/testRunner.js",
     "test-selenium": "start-selenium && npm run test-runner"
   },
   "dependencies": {
     "glob": "^6.0.1",
+    "guesslanguage": "^0.2.0",
     "http-server": "0.7.3",
     "jquery": "^2.1.4",
     "phantomjs": "^1.9.18",
     "q": "^1.1.2",
+    "rainbowvis.js": "^1.0.1",
     "selenium-standalone": "2.43.1-5",
     "stdio": "^0.2.7",
     "webdriverio": "2.3.0"
@@ -36,7 +38,6 @@
   "devDependencies": {
     "@quailjs/quail-core": "0.0.15",
     "babel-eslint": "^5.0.0-beta4",
-    "bower": "^1.3.12",
     "chai": "^1.9.2",
     "chai-as-promised": "^4.1.1",
     "chai-spies": "^0.5.1",
