Remove tests.json references.

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,9 +35,9 @@
     "document": true,
     "jQuery": true,
     "$": true,
+    "globalQuail": true,
     "guessLanguage": true,
     "process": true,
-    "quail": true,
     "quailBuilderTests": true,
     "require": true,
     "phantom": true,
