--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai-as-promised": "^4.1.1",
     "chai-spies": "^0.5.1",
     "deepmerge": "^0.2.7",
+    "dom-select": "^1.1.0",
     "eslint": "^1.3.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
     "mocha": "^2.0.1",
