Hacking at the jQuery weeds

--- a/.quailrc
+++ b/.quailrc
@@ -1,13 +1,11 @@
 {
   "assessmentSpecsPath": "test/assessmentSpecs/specs",
-  "jquery": "node_modules/jquery/dist/jquery.min.js",
   "quail": "dist/runInBrowser.js",
   "requireModules": [],
   "requireAssessmentModules": [
     "config/all_assessments.json"
   ],
   "requirePaths": [
-    "./src/assessments",
-    "./vendor"
+    "./src/assessments"
   ]
 }
