Fix linting errors

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jscs": "jscs -c .jscsrc src/**/*.js test/assessmentSpecs/testRunner.js test/assessmentSpecs/*.js",
     "eslint": "eslint -c .eslintrc src/**/*.js test/assessmentSpecs/*.js",
     "build": "quail build",
+    "linters": "npm run jscs && npm run eslint",
     "test": "npm run jscs && npm run eslint && npm run test-runner",
     "selenium": "start-selenium",
     "test-runner": "node ./test/assessmentSpecs/testRunner.js",
