--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "selenium": "start-selenium",
     "test-runner": "node ./test/assessmentSpecs/testRunner.js",
     "test-selenium": "start-selenium && npm run test-runner",
-    "install-selenium-standalone": "selenium-standalone install"
+    "install-selenium-standalone": "selenium-standalone install",
+    "watch": "npm-watch"
   },
   "dependencies": {
     "glob": "^6.0.1",
@@ -46,6 +47,13 @@
     "eslint": "^1.3.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
     "mocha": "^2.0.1",
+    "npm-watch": "0.0.1",
     "sinon": "^1.10.3"
+  },
+  "watch": {
+    "build": [
+      "src/**/*.js",
+      "test/assessmentSpecs/**/*.js"
+    ]
   }
 }
