--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-//  "presets": [
-//    "es2015"
-//  ],
-//  "plugins": [
-//    "transform-object-rest-spread"
-//  ]
+  "presets": [
+    "es2015"
+  ],
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
