--- a/package.json
+++ b/package.json
@@ -29,32 +29,18 @@
     "glob": "^6.0.1",
     "guesslanguage": "^0.2.0",
     "http-server": "0.7.3",
-    "phantomjs": "^1.9.19",
     "progress": "^1.1.8",
     "q": "^1.1.2",
     "rainbowvis.js": "^1.0.1",
     "selenium-standalone": "^4.7.2",
-    "stdio": "^0.2.7",
     "webdriverio": "^3.3.0"
   },
   "devDependencies": {
-    "@quailjs/quail-core": "0.0.20",
+    "@quailjs/quail-core": "0.0.21",
     "babel-eslint": "^5.0.0-beta4",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "chai": "^1.9.2",
-    "chai-as-promised": "^4.1.1",
-    "chai-spies": "^0.5.1",
-    "deepmerge": "^0.2.7",
     "eslint": "^1.3.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
-    "mkdirp": "^0.5.1",
-    "mocha": "^2.0.1",
-    "npm-watch": "0.0.1",
-    "sinon": "^1.10.3"
+    "npm-watch": "0.0.1"
   },
   "watch": {
     "build": [
