--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
   },
   "devDependencies": {
     "@quailjs/quail-core": "0.0.21",
-    "babel-eslint": "^5.0.0-beta4",    
+    "babel-eslint": "^5.0.0-beta4",
     "deepmerge": "^0.2.7",
     "eslint": "^1.3.1",
     "jscs": "jscs-dev/node-jscs#c5adeba",
+    "mocha": "^2.0.1",
     "npm-watch": "0.0.1"
   },
   "watch": {
