--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jscs": "jscs-dev/node-jscs#c5adeba",
     "mocha": "^2.0.1",
     "npm-watch": "0.0.1",
+    "phantomjs": "^1.9.19",
     "sinon": "^1.10.3"
   },
   "watch": {
